[package]
name = "replayman"
version = "0.1.1"

authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
license = "MIT OR Apache-2.0"

edition = "2021"

categories = []
description = "Log agent to replay time-stamped log stream."
documentation = "https://docs.rs/replayman"
keywords = ["springql", "log-agent"] # up to 5 keywords, each keyword should have <= 20 chars
readme = "README.md"
repository = "https://github.com/SpringQL/replayman"

[dependencies]
springql-foreign-service = "0.1"

chrono = "0.4"

anyhow = "1.0"

clap = "3.0.0-rc.3"

rumqttc = "0.10"

env_logger = "0.9"
log = "0.4"
