[package]
name = "replayman"
version = "0.4.0"

authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
license = "MIT OR Apache-2.0"

edition = "2021"

categories = []
description = "Log agent to replay time-stamped log stream."
documentation = "https://docs.rs/replayman"
keywords = ["springql", "log-agent"] # up to 5 keywords, each keyword should have <= 20 chars
readme = "README.md"
repository = "https://github.com/SpringQL/replayman"

[dependencies]
time = {version = "0.3.9", features = ["formatting", "parsing", "macros"]}

csv = "1.1"
serde_json = "1.0"

anyhow = "1.0"

clap = {version = "4.0", features = ["derive"]}

rumqttc = "0.17"

rdkafka = {version = "0.29", features = ["cmake-build"], default-features = false}

env_logger = "0.9"
log = "0.4"
